# OSVR-Android-Build

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.cmd  build.sh  configure-gui.cmd  configure-mingw.cmd  configure-mostly-clean.sh  configure-ninja.cmd  configure-nmake.cmd  configure.cmd  devterminal.cmd  package.cmd
src/: .gitignore  CMakeLists.txt  DownloadScript.cmake  InstallTreeSuperBuildPrefix.cmake  SDL-add-ons.cmake  SDL_config.h.cmake.replacement
src/OSVR-Unity-Rendering/: .gitignore  CMakeLists.txt  OsvrRenderingPlugin.cpp  PluginConfig.h  UnityRendererType.h
src/osvr_json_to_c/: CMakeLists.txt
src/packaging/: launcher.sh  setup.sh
